# dialogflow-cx-converter

./: .gitignore  README  README.md  SARA_CAPITALIZACAO.json  analysis.ipynb  convert.py  example_df.json  pyproject.toml  requirements.txt
docs/: Makefile
docs/source/: conf.py  index.rst
src/convert/: __main__.py  creation_functions.py  custom_types.py  expression_parser.py  expression_translation.py  tree_creator.py
tests/: custom_types_test.py  expression_parser_test.py  expression_translation_test.py  tree_creator_test.py
