[project]
name = "df_cx_converter"
version = "0.1.0"
authors = [
  { name="Egon Soares", email="egon@google.com" },
]
description = "Dialogflow CX Converter"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "google-cloud-dialogflow-cx"
]

[project.optional-dependencies]
dev = [
    "pyaml",
    "pytest"
]

[project.urls]
"Homepage" = "https://github.com/googlecloudplatform/dialogflow_cx_converter"
"Bug Tracker" = "https://github.com/googlecloudplatform/dialogflow_cx_converter/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-rA -q"
testpaths = ["tests"]